--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                Btech</div>
                 <div class="desc">
                     <div class="desc-title">Rajkumar Goel institute technology Ghaziabad</div>
-                    <p>Current CGPA:-89</p>
+                    <p>Current CGPA:-8.9</p>
                 </div>
             </div>
                  <!-- education data end -->
@@ -207,50 +207,44 @@
                     </div>
                     <h3>Projects</h3>
                 </div>
-                <div class="right-site-con">
-                    <div class="years">2023-2024<br />
-                    Ecommerce-Website</div>
-                    <div class="desc">
-                        <div class="desc-title"> <a class="year"  href="https://boisterous-praline-7192f1.netlify.app/" >Link--Click to See</a></div>
-                        <p>design and develop a E-commerce-website using basic developmet fundamental Html Css and javascript.
-                            Assessed range-of-buy and sell the data on this website (JavaScript)</p>
-                    </div>
-                </div>
-                    <div class="right-site-con">
-                    <div class="years">2023-2024<br />
-                    Online-Virtual-Platform</div>
-                    <div class="desc">
-                        <div class="desc-title"> <a class="year"  href="https://github.com/Charu-sarswat/Online-virtual-platform" >Link--Click to See</a></div>
-                        <p>it is a virtual class taking platform on which we can virtually taking classes and video confererencing feature also available in this projrct a teacher can provide his notes and any announcement for the staudents
-                            it is a best industrial based project</p>
-                    </div>
-                </div>
-                <div class="right-site-con">
-                    <div class="years">2023-2024<br />
-                        Dynamic and Responsive Portfolio Website</div>
-                    <div class="desc">
-                        <div class="desc-title"> <a class="year"  href="https://github.com/Charu-sarswat/portfolio/blob/main/Portfolio-main/index.html" >Link--Click to See</a></div>
-                        <p>design and develop a E-commerce-website using basic developmet fundamental Html Css and javascript.
-                            Assessed range-of-buy and sell the data on this website (JavaScript)</p>
-                    </div>
-                </div>
-                <div class="right-site-con">
-                    <div class="years">2023-2024<br />
-                      Online-Teacing Platform </div>
-                    <div class="desc">
-                        <div class="desc-title"> <a class="year"  href="https://github.com/Charu-sarswat/Mern/commit/d01a33525f0772de93b5b7e9b923b3df27a6f826" >Link--Click to See</a></div>
-                        <p>Online Teaching Platform is a mern based project where a student can register and pay the fees and Reading thenotes</p>
-                    </div>
-                </div>
-                <div class="right-site-con">
-                    <div class="years">2023-2024<br />
-                        Online virtual calander  </div>
-                    <div class="desc">
-                        <div class="desc-title"> <a class="year"  href="https://github.com/Charu-sarswat/calander" >Link--Click to See</a></div>
-                        <p>Online virtual calander app on mern technology .where we can add the tasks ,delete the tasks,Edit the tasks and maintain our goals and Animated features in this app.</p>
-                    </div>
-                </div>
-
+                <table class="project">
+                    <thead>
+                        <tr>
+                            <th>Year and Name</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="bold-column">2023-2024
+                                <br>
+                                Ecommerce Website
+                            </td>
+                            <td><a href="https://boisterous-praline-7192f1.netlify.app/">Link-Click to See</a><br>
+                                Design and develop an E-commerce website using fundamental HTML, CSS, and JavaScript. Assessed range-of-buy and sell data on this website (JavaScript).</td>
+                        </tr>
+                        <tr>
+                            <td class="bold-column">2023-2024 <br>
+                                Online Virtual Platform</td>
+                            <td>
+                                <a href="https://github.com/Charu-sarswat/Online-virtual-platform">Link-Click to See</a><br>Virtual class platform with video conferencing, note sharing, and announcements for students. Industrial-based project.</td>
+                        </tr>
+                        <tr>
+                            <td class="bold-column">2023-2024 <br>
+                                Dynamic and Responsive Portfolio Website
+                            </td>
+                            <td><a href="https://github.com/Charu-sarswat/portfolio/blob/main/Portfolio-main/index.html">Link-Click to See</a><br>Design and develop a portfolio website using basic development fundamentals like HTML, CSS, and JavaScript.</td>
+                        </tr>
+                        <tr>
+                            <td class="bold-column">2023-2024 <br>Online Teaching Platform</td>
+                            <td><a href="https://github.com/Charu-sarswat/Mern/commit/d01a33525f0772de93b5b7e9b923b3df27a6f826">Link-Click to See</a><br>MERN-based project where students can register, pay fees, and read notes.</td>
+                        </tr>
+                        <tr>
+                            <td class="bold-column">2023-2024 <br>Online Virtual Calendar</td>
+                            <td><a href="https://github.com/Charu-sarswat/calander">Link-Click to See</a><br>Calendar app using MERN technology to add, edit, delete tasks and maintain goals with animations.</td>
+                        </tr>
+                    </tbody>
+                </table>
                  <!-- reference start -->
 
                  <div class="right-site-title">
